--- a/products.html
+++ b/products.html
@@ -319,11 +319,11 @@ font-weight: 500;
                     hidden group-hover:flex flex-col bg-white shadow-lg 
                     rounded-lg p-4 w-56 z-50">
           <ul class="space-y-2 text-sm">
-            <li>Awnings</li>
-            <li>Car Parking</li>
-            <li>Tensile Structures</li>
-            <li>Sheds</li>
-            <li>Residential Fabrication</li>
+            <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Awnings</a></li>
+            <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Car Parking</a></li>
+            <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Tensile Structures</a></li>
+            <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Sheds</a></li>
+            <li><a href="fabrication.html" class="text-gray-800 hover:text-yellow-500">Residential Fabrication</a></li>
           </ul>
         </div>
       </div>
@@ -335,15 +335,15 @@ font-weight: 500;
                     hidden group-hover:flex flex-col bg-white 
                     shadow-lg rounded-lg p-4 w-56 z-50">
           <ul class="space-y-2 text-sm">
-            <li>Furniture Work</li>
-            <li>Plumbing</li>
-            <li>Electrical Work</li>
-            <li>Tile Work</li>
-            <li>Painting</li>
-            <li>Internal Modification</li>
-            <li>POP</li>
-            <li>Sliding Windows</li>
-            <li>French Doors</li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Furniture Work</a></li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Plumbing</a></li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Electrical Work</a></li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Tile Work</a></li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Painting</a></li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Internal Modification</a></li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">POP</a></li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">Sliding Windows</a></li>
+            <li><a href="interior.html" class="text-gray-800 hover:text-yellow-500">French Doors</a></li>
           </ul>
         </div>
       </div>
@@ -356,8 +356,8 @@ font-weight: 500;
                     hidden group-hover:flex flex-col bg-white 
                     shadow-lg rounded-lg p-4 w-56 z-50">
           <ul class="space-y-2 text-sm">
-            <li>Construction</li>
-            <li>Renovation</li>
+            <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Construction</a></li>
+            <li><a href="civil-work.html" class="text-gray-800 hover:text-yellow-500">Renovation</a></li>
           </ul>
         </div>
       </div>
@@ -370,13 +370,10 @@ font-weight: 500;
                     hidden group-hover:flex flex-col bg-white 
                     shadow-lg rounded-lg p-4 w-56 z-50">
           <ul class="space-y-2 text-sm">
-            <li>Society Painting</li>
-            <li>Bungalow Painting</li>
-            <li>Cleaning</li>
-            <li>Main Gate Work</li>
-            <li>Exterior Renovation</li>
-            <li>Compound Wall</li>
-            <li>Maintenance</li>
+            <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Society Painting</a></li>
+            <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Bungalow Painting</a></li>
+            <li><a href="exterior.html" class="text-gray-800 hover:text-yellow-500">Cleaning</a></li>
+            
           </ul>
         </div>
       </div>
@@ -389,12 +386,12 @@ font-weight: 500;
                     hidden group-hover:flex flex-col bg-white 
                     shadow-lg rounded-lg p-4 w-56 z-50">
           <ul class="space-y-2 text-sm">
-            <li>Waterproofing</li>
-            <li>Housekeeping</li>
-            <li>Society AMC</li>
-            <li>Pest Control</li>
-            <li>Gardening</li>
-            <li>Anti-Bird Netting</li>
+            <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Waterproofing</a></li>
+            <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Housekeeping</a></li>
+            <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Society AMC</a></li>
+            <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Pest Control</a></li>
+            <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Gardening</a></li>
+            <li><a href="other-services.html" class="text-gray-800 hover:text-yellow-500">Anti-Bird Netting</a></li>
           </ul>
         </div>
       </div>
