--- a/about.html
+++ b/about.html
@@ -764,42 +764,42 @@ gsap.from("#vision-box", {
 </script>
 
    <!-- CTA -->
-  <section class="w-full py-20 px-6 md:px-16 bg-white">
-  <div class="max-w-7xl mx-auto rounded-3xl overflow-hidden"
-       style="background: linear-gradient(90deg, #f8e1b6 0%, #b57ba6 100%);">
+  <section class="relative w-full py-20 px-6 h-[60vh] md:px-16 overflow-hidden" id="cta-section">
 
-    <div class="grid grid-cols-1 md:grid-cols-2 items-center px-10 md:px-20 py-16 gap-10">
+  <!-- 🔥 VIDEO BACKGROUND -->
+  <video autoplay loop muted playsinline preload="auto"
+         class="absolute inset-0 w-full h-full object-cover z-0">
+    <source src="images/cta.mp4" type="video/mp4">
+  </video>
 
-      <!-- LEFT TEXT -->
-      <div>
-        <h2 class="text-4xl md:text-5xl font-bold text-gray-900 leading-tight mb-6">
-          Contact Us to<br>Learn More!
-        </h2>
+  <!-- DARK OVERLAY -->
+  <div class="absolute inset-0 bg-black/50 z-10"></div>
 
-        <p class="text-gray-800 text-lg leading-relaxed mb-8">
-          Partner with Venkateshwara Corporation to bring premium tensile solutions
-          to your space. Let us help your organization thrive with modern designs,
-          durable materials, and expert engineering.
-        </p>
+  <!-- CONTENT -->
+  <div class="relative max-w-3xl mx-auto text-center text-white flex flex-col justify-center h-full z-20">
+    <div id="cta-text">
+      
+      <h2 class="text-3xl md:text-5xl font-bold leading-tight mb-4">
+        Contact Us to Learn More!
+      </h2>
 
-        <a href="contact.html"
-           class="inline-flex items-center gap-2 bg-purple-700 hover:bg-purple-800
-                  text-white font-semibold text-lg px-8 py-4 rounded-full transition">
-          Contact Us
-          <span>➜</span>
-        </a>
-      </div>
+      <p class="text-lg md:text-xl leading-relaxed mb-6">
+        Partner with Venkateshwara Corporation to bring premium tensile solutions
+        to your space. Let us help your organization thrive with modern designs,
+        durable materials, and expert engineering.
+      </p>
 
-      <!-- RIGHT IMAGE SECTION -->
-      <div class="flex justify-center md:justify-end">
-        <img src="" class="h-80 md:h-96 object-contain -mr-6" alt="">
-        <img src="images/about hero4.jpg" class="h-80 md:h-96 object-contain" alt="">
-      </div>
+      <!-- ⭐ NEW BUTTON -->
+      <a href="contact.html"
+         class="inline-block bg-gradient-to-r from-yellow-400 to-yellow-600 text-black font-bold text-lg px-10 py-3 rounded-full shadow-xl hover:scale-105 transition-transform duration-300">
+        Reach Out Now →
+      </a>
 
     </div>
-
   </div>
+
 </section>
+
 
   <!-- FOOTER -->
   <!-- FOOTER -->
